--- a/AWS/AWS Cloud Practitioner/00. Cloud Concepts.md
+++ b/AWS/AWS Cloud Practitioner/00. Cloud Concepts.md
@@ -35,16 +35,19 @@ There are three primary models of cloud computing:
 ### Infrastructure as a Service (IaaS)
 
 Provides building blocks for cloud IT, such as virtual servers and networks.
-- E.g. Amazon EC2.
+
+- E.g. Amazon [EC2](04.%20Amazon%20EC2.md#04.%20EC2).
 
 ### Platform as a Service (PaaS)
 
 Provides platforms for developers to build applications on, without having to manage the infrastructure.
-- E.g. AWS Elastic Beanstalk.
+
+- E.g. AWS [Elastic Beanstalk](12.%20Infrastructure%20Management.md#Elastic%20Beanstalk).
 
 ### Software as a Service (SaaS)
 
 Provides fully managed software applications delivered over the internet.
+
 - E.g. Amazon Chime, Salesforce.
 
 ## Cloud Computing vs On-Prem Computing
@@ -80,7 +83,7 @@ Horizontal scaling means **increasing the number of instances/systems** of an ap
 It is possible to scale in, (decreasing the number of instances), or scale out (increasing the number of instances).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Horizontal Scaling.png" alt="Horizontal Scaling" />
+  <img src="../../Assets/Images/Diagrams/AWS/Horizontal Scaling.png" alt="Horizontal Scaling" />
 </div>
 
 #### Vertical Scaling
@@ -90,7 +93,7 @@ Vertical scaling means **increasing the size of a single instance** to handle mo
 It is possible to **scale down**, (decreasing the size of the instance), or **scale up** (increasing the size of the instance).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Vertical Scaling.png" alt="Horizontal Scaling" />
+  <img src="../../Assets/Images/Diagrams/AWS/Vertical Scaling.png" alt="Vertical Scaling" />
 </div>
 
 ## Load Balancing
@@ -98,7 +101,7 @@ It is possible to **scale down**, (decreasing the size of the instance), or **sc
 Load Balancing is the **process of distributing incoming network traffic across multiple resources/servers** to ensure that no single server becomes overwhelmed and to maximize performance, reliability and availability.
 
 <div align="center">
-  <img src="../../Assets/Images/Cloud - Load Balancing.png" alt="CLoud - Load Balancing" />
+  <img src="../../Assets/Images/Diagrams/AWS/Load Balancing.png" alt="Load Balancing" />
 </div>
 
 ### Why use a load balancer?
