--- a/AWS/AWS Cloud Practitioner/01. Shared Responsibility Model.md
+++ b/AWS/AWS Cloud Practitioner/01. Shared Responsibility Model.md
@@ -26,7 +26,7 @@ AWS is responsible for the security **of** the cloud. This means:
 
 The customer is responsible of the security **in** the cloud. This means:
 
-- For [EC2](04.%20Amazon%20EC2.md#04--ec2) instances, the customer is responsible for management of the guest OS, firewall, network configuration and [03. IAM](03.%20IAM.md#03--iam);
+- For [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances, the customer is responsible for management of the guest OS, firewall, network configuration and [IAM](03.%20IAM.md#03.%20IAM);
 - Encrypting application data.
 
 ## Shared Responsibilities
