--- a/AWS/AWS Cloud Practitioner/02. AWS Global Infrastructure.md
+++ b/AWS/AWS Cloud Practitioner/02. AWS Global Infrastructure.md
@@ -32,26 +32,26 @@ AWS is built on a global infrastructure designed for high availability and low l
 The infrastructure is built on top of the following:
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Global Infrastructure.png" alt="AWS - Global Infrastructure" />
+  <img src="../../Assets/Images/Diagrams/AWS/Global Infrastructure.png" alt="Global Infrastructure" />
 </div>
 
 ### Regions
 
-Regions are **physical locations worldwide**, each containing multiple [Availability Zones](#availability-zones-azs).
+Regions are **physical locations worldwide**, each containing multiple [Availability Zones (AZs)](#Availability%20Zones%20(AZs)).
 
-**Note:** A region is composed by **at least** three [AZs](#avilability-zones-azs).
+**Note:** A region is composed by **at least** three [AZs](#Availability%20Zones%20(AZs)).
 
 **Note:** Not all AWS services are available on every region.
 
 ### Availability Zones (AZs)
 
-AZs are isolated **data centers within a [region](#regions)** that allow fault-tolerant architectures.
+AZs are isolated **data centers within a [region](#Regions)** that allow fault-tolerant architectures.
 
 **Note:** An availability zone is composed by **at least** one data center.
 
 ### Edge Locations (Points of Presence)
 
-Points of Presence used by [CloudFront](#cloudfront) to **cache content** closer to users.
+Points of Presence used by [CloudFront](#CloudFront%20(CDN)) to **cache content** closer to users.
 
 ### Local Zones
 
@@ -77,7 +77,7 @@ Route 53 has four main routing policies:
 - **Use case:** When there is only a single resource to route traffic to, with no special routing logic.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Route 53 - Simple Routing.png" alt="AWS - Route 53 - Simple Routing" />
+  <img src="../../Assets/Images/Diagrams/AWS/Route 53 - Simple Routing.png" alt="Route 53 - Simple Routing" />
 </div>
 
 #### Weighted Routing
@@ -86,7 +86,7 @@ Route 53 has four main routing policies:
 - **Use case:** For load balancing, testing new versions or gradually shifting traffic between endpoints.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Route 53 - Weighted Routing.png" alt="AWS - Route 53 - Weighted Routing" />
+  <img src="../../Assets/Images/Diagrams/AWS/Route 53 - Weighted Routing.png" alt="Route 53 - Weighted Routing" />
 </div>
 
 #### Latency Routing
@@ -100,14 +100,8 @@ Route 53 has four main routing policies:
 - **Use case:** High availability and disaster recovery.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Route 53 - Failover Routing.png" alt="AWS - Route 53 - Failover Routing" />
+  <img src="../../Assets/Images/Diagrams/AWS/Route 53 - Failover Routing.png" alt="Route 53 - Failover Routing" />
 </div>
-
-## CloudFront
-
-CloudFront is AWS's **Content Delivery Network** (CDN) service.
-
-It **delivers content globally** with low latency by **caching copies** of web content (like websites, videos, APIs, software downloads) at **edge locations** close to users.
 
 ## AWS Global Accelerator
 
@@ -116,5 +110,5 @@ The AWS Global Accelerator is a networking service designed to **improve availab
 It leverages the AWS internal network to optimize the route to an application. (~60% improvement).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Global Accelerator.png" alt="AWS - Global Accelerator" />
+  <img src="../../Assets/Images/Diagrams/AWS/Global Accelerator.png" alt="Global Accelerator" />
 </div>
