--- a/AWS/AWS Cloud Practitioner/03. IAM.md
+++ b/AWS/AWS Cloud Practitioner/03. IAM.md
@@ -22,7 +22,7 @@ It helps control who can access AWS resources and what actions they can perform.
 It is possible to create the following in IAM:
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - IAM.png" alt="AWS - IAM" />
+  <img src="../../Assets/Images/Diagrams/AWS/IAM.png" alt="IAM" />
 </div>
 
 ## Users
