--- a/AWS/AWS Cloud Practitioner/04. Amazon EC2.md
+++ b/AWS/AWS Cloud Practitioner/04. Amazon EC2.md
@@ -40,7 +40,7 @@ tags:
 
 AWS EC2, (Elastic Compute Cloud), **provides secure & sizable** compute capacity in the cloud.
 
-It is a fundamental [IaaS](00.%20Cloud%20Concepts.md#infrastructure-as-a-service-iaas) service that allows customers to run applications on virtual servers without investing into physical hardware.
+It is a fundamental [IaaS](00.%20Cloud%20Concepts.md#Infrastructure%20as%20a%20Service%20(IaaS)) service that allows customers to run applications on virtual servers without investing into physical hardware.
 
 **Note:** Remote access via SSH is possible when using a `.pem`file for authentication by using:
 
@@ -58,8 +58,8 @@ When configuring an EC2 instance, the following are possible to specify:
 - How much compute power & cores (CPU) the machine will have;
 - How much random access memory (RAM) the machine will have;
 - How storage space the machine will have:
-	- Network attached ([EBS](#ebs-volumes) & [EFS](#efs-volumes));
-	- Hardware ([EC2 Instance Store](#ec2-instance-store)).
+	- Network attached ([EBS](#EBS%20Volumes) & [EFS](#EFS%20Volumes));
+	- Hardware ([EC2 Instance Store](#EC2%20Instance%20Store)).
 - The network card:
 	- Speed & Public IP address.
 - The firewall rules:
@@ -150,7 +150,7 @@ AWS offers different pricing models for EC2 instances to accommodate different u
 
 ### EC2 Capacity Reservations
 
-- Reserve On Demand model instances capacity in a specific [availability zone](02.%20AWS%20Global%20Infrastructure.md#availability-zones-azs) for any duration;
+- Reserve On Demand model instances capacity in a specific [availability zone](02.%20AWS%20Global%20Infrastructure.md#Availability%20Zones%20(AZs)) for any duration;
 - Access at all time to the EC2 capacity when needed;
 - No time commitment, no billing discounts;
 - Charged at the On Demand model rate whether the instance is running or not.
@@ -162,18 +162,18 @@ EC2 supports multiple storage types that fit different needs:
 ### EBS Volumes
 
 An EBS (Elastic Block Store) volume, is a **network drive** that can be attached to instances while they are running.
+02.%20AWS%20Global%20Infrastructure.md#Availability%20Zones%20(AZs)
+**Note:** EBS volumes can be mounted to a **single instance at a time** and are bound to specific [availability zones](02.%20AWS%20Global%20Infrastructure.md#Availability%20Zones%20(AZs)).
 
-**Note:** EBS volumes can be mounted to a **single instance at a time** and are bound to specific [availability zones](02.%20AWS%20Global%20Infrastructure.md#availability-zones-azs).
-
-> **Tip**:  
+> [!TIP]
 > Think of EBS volumes as network USB sticks.
 
 #### EBS Snapshots
 
-EBS Snapshots are backups of EBS Volumes at a point in time. They can be copied across [regions](02.%20AWS%20Global%20Infrastructure.md#availability-zones-azs)).
+EBS Snapshots are backups of [EBS Volumes](#EBS%20Volumes) at a point in time. They can be copied across [regions](02.%20AWS%20Global%20Infrastructure.md#Regions).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - EBS Snapshots.png" alt="AWS - EBS Snapshots" />
+  <img src="../../Assets/Images/Diagrams/AWS/EBS Snapshots.png" alt="EBS Snapshots" />
 </div>
 
 **Note:** In order to perform a snapshot, it is not required to detach the volume, but it is recommended to do so.
@@ -186,7 +186,7 @@ However, archived **snapshots take between 24h to 72h to be restored**.
 
 ### EC2 Instance Store
 
-While [EBS Volumes](#ebs-volumes) have good performance, the fact that they are network drives limits their potential.
+While [EBS Volumes](#EBS%20Volumes) have good performance, the fact that they are network drives limits their potential.
 
 If high performance is needed, the EC2 Instance Store provides **hardware disks with better I/O performance**.
 
@@ -196,10 +196,10 @@ They are suited for buffers, cache, scratch data and temporary content.
 
 An EFS (Elastic File System) volume is a managed NFS, (Network File System), that **can be mounted on 100s of EC2**.
 
-EFS volumes are highly available, scalable and are about 3x more expensive that [EBS Volumes](#ebs-volumes).
+EFS volumes are highly available, scalable and are about 3x more expensive that [EBS Volumes](#EBS%20Volumes).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - EFS Volumes.png" alt="AWS - EFS Volumes" />
+  <img src="../../Assets/Images/Diagrams/AWS/EFS Volumes.png" alt="EFS Volumes" />
 </div>
 
 #### EFS Infrequent Access (EFS-IA)
@@ -219,7 +219,7 @@ Amazon FSx is a fully managed **service to get 3rd party high performance file s
 FSx for Windows File Server is a fully managed highly reliable and scalable Windows native shared file system.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - FSx for Windows.png" alt="AWS - FSx for Windows File System" />
+  <img src="../../Assets/Images/Diagrams/AWS/FSx for Windows.png" alt="FSx for Windows File System" />
 </div>
 
 FSx supports the SMB & NTFS protocols.
@@ -233,7 +233,7 @@ FSx for Lustre is a fully managed, high performance, scalable file storage for H
 It scales up to 100 GB/s, millions of IOPS, sub-ms latencies and is used for machine learning, analytics video processing, financial modeling, etc.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - FSx for Lustre.png" alt="AWS - FSx for Lustre" />
+  <img src="../../Assets/Images/Diagrams/AWS/FSx for Lustre.png" alt="FSx for Lustre" />
 </div>
 
 **Note:** The name "Lustre" is derived from "Linux" & "Cluster".
@@ -245,7 +245,7 @@ An AMI, (Amazon Machine Image), is a **customization of an EC2 instance**, that 
 Since all software is pre-packaged, the boot & configuration times are faster.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - AMIs.png" alt="AWS - AMIs" />
+  <img src="../../Assets/Images/Diagrams/AWS/AMIs.png" alt="AMIs" />
 </div>
 
 **Note:** AMIs are built for specific regions but can be copied across regions.
@@ -257,5 +257,5 @@ The EC2 Image Builder is a free service used to **automate the creation** of vir
 It can be run on a schedule and it automates the creation, maintenance and validation of AMIs.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - EC2 Image Builder.png" alt="AWS - EC2 Image Builder" />
+  <img src="../../Assets/Images/Diagrams/AWS/EC2 Image Builder.png" alt="EC2 Image Builder" />
 </div>
