--- a/AWS/AWS Cloud Practitioner/05. Amazon S3.md
+++ b/AWS/AWS Cloud Practitioner/05. Amazon S3.md
@@ -30,7 +30,7 @@ tags:
 
 Amazon S3 allows for **object, (files), storage in buckets, (directories)**, and is advertised as "infinitely scaling" storage.
 
-**Note:** S3 buckets are **defined at a [region](02.%20AWS%20Global%20Infrastructure.md#regions) level**, it is not a global service. However, bucket names must be unique across all [regions](02.%20AWS%20Global%20Infrastructure.md#regions) and [AZs](02.%20AWS%20Global%20Infrastructure.md#availability-zones-azs).
+**Note:** S3 buckets are **defined at a [region](02.%20AWS%20Global%20Infrastructure.md#regions) level**, it is not a global service. However, bucket names must be unique across all [regions](02.%20AWS%20Global%20Infrastructure.md#regions) and [AZs](02.%20AWS%20Global%20Infrastructure.md#Availability%20Zones%20(AZs)).
 
 ## S3 Use Cases
 
