--- a/AWS/AWS Cloud Practitioner/06. Databases.md
+++ b/AWS/AWS Cloud Practitioner/06. Databases.md
@@ -136,6 +136,6 @@ Redshift stores data **columnar** (column-oriented), which is optimized for **ag
 
 Amazon EMR is a **managed big data processing service**. It allows the processing and analyzys on massive amounts of data using frameworks like Apache **Hadoop**, Spark, HBase, Flink, and Presto.
 
-EMR takes care of provisioning and configuring multiple [EC2](04.%20Amazon%20EC2.md#04--ec2) instances in a cluster so that they can work together in analyzing data from a big data perspective.
+EMR takes care of provisioning and configuring multiple [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances in a cluster so that they can work together in analyzing data from a big data perspective.
 
 Use cases: Data processing, machine learning, web indexing, big data, etc.
