--- a/AWS/AWS Cloud Practitioner/07. Compute Services.md
+++ b/AWS/AWS Cloud Practitioner/07. Compute Services.md
@@ -24,7 +24,7 @@ tags:
 
 Amazon ECS is a fully managed **container orchestration service** for running Docker containers in AWS.
 
-**Note:** While ECS handles placement, scaling and scheduling of containers, these will run on user-managed [EC2](04.%20Amazon%20EC2.md#04--ec2) instances.
+**Note:** While ECS handles placement, scaling and scheduling of containers, these will run on user-managed [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances.
 
 <div align="center">
   <img src="../../Assets/Images/AWS - ECS.png" alt="AWS - ECS" />
@@ -38,7 +38,7 @@ AWS Fargate is a c**ompute engine for containers** that works with [ECS](#amazon
   <img src="../../Assets/Images/AWS - Fargate.png" alt="AWS - Fargate" />
 </div>
 
-**Note:** There is no need to manage [EC2](04.%20Amazon%20EC2.md#04--ec2) instances when using Fargate.
+**Note:** There is no need to manage [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances when using Fargate.
 
 ### Amazon ECR (Elastic Container Registry)
 
@@ -56,7 +56,7 @@ It is integrated with [ECS](#amazon-ecs-elastic-container-service) and [Fargate]
 
 Amazon EKS is a **managed [Kubernetes](01.%20Overview.md#01--overview) control plane** for running containerized applications using Kubernetes.
 
-It supports standard `kubectl`commands and AWS managed the k8s control plane, while the user managed the worker nodes (via [EC2](04.%20Amazon%20EC2.md#04--ec2) or [Fargate](#aws-fargate-serverless)).
+It supports standard `kubectl`commands and AWS managed the k8s control plane, while the user managed the worker nodes (via [EC2](04.%20Amazon%20EC2.md#04.%20EC2) or [Fargate](#aws-fargate-serverless)).
 
 <div align="center">
   <img src="../../Assets/Images/AWS - EKS.png" alt="AWS - EKS" />
@@ -83,7 +83,7 @@ AWS Batch is a fully managed service to **run batch computing jobs** efficiently
 
 Key points:
 
-- Automatically provisions compute ([EC2](04.%20Amazon%20EC2.md#04--ec2));
+- Automatically provisions compute ([EC2](04.%20Amazon%20EC2.md#04.%20EC2));
 - Jobs are defined using Docker images;
 - Runs on [ECS](#amazon-ecs-elastic-container-service) in the background;
 - Ideal for analytics, simulations or large scale data processing.
