--- a/AWS/AWS Cloud Practitioner/09. VPCs & Networking.md
+++ b/AWS/AWS Cloud Practitioner/09. VPCs & Networking.md
@@ -44,7 +44,7 @@ IPv4 is the standard **32-bit** address system to identify resources on a networ
 
 Used to access resources via the internet.
 
-**Note:** [EC2](04.%20Amazon%20EC2.md#04--ec2) instances get a new public IPv4 address on stop/start.
+**Note:** [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances get a new public IPv4 address on stop/start.
 
 #### Private IPv4
 
@@ -54,7 +54,7 @@ Used within VPCs for internal communication
 
 #### Elastic IP
 
-Fixed public IPv4 attached to an [EC2](04.%20Amazon%20EC2.md#04--ec2).
+Fixed public IPv4 attached to an [EC2](04.%20Amazon%20EC2.md#04.%20EC2).
 
 Useful for stable endpoints (e.g. VPNs).
 
@@ -68,7 +68,7 @@ IPv6 is a **128-bit** addressing system where **all addresses are public**.
 
 A Virtual Private Network, (VPC), is an isolated AWS network where it is possible to deploy resources.
 
-A subnet is a range if IPs inside a VPC, associated with a specific [AZ](02.%20AWS%20Global%20Infrastructure.md#availability-zones-azs).
+A subnet is a range if IPs inside a VPC, associated with a specific [AZ](02.%20AWS%20Global%20Infrastructure.md#Availability%20Zones%20(AZs)).
 
 - **Public Subnet:** - Has route to internet Gateway;
 - **Private Subnet** - No direct internet access. Needs NAT (Gateway or Instance).
@@ -179,6 +179,6 @@ It allows for ALLOW and DENY IP based rules that are evaluated in order.
 
 ### Security Groups
 
-A Security Group is a **stateful firewall** attached to an [EC2](04.%20Amazon%20EC2.md#04--ec2) or ENIs, (Elastic Network Interfaces).
+A Security Group is a **stateful firewall** attached to an [EC2](04.%20Amazon%20EC2.md#04.%20EC2) or ENIs, (Elastic Network Interfaces).
 
 It is applied at the instance level and only ALLOW rules can be defined.
