--- a/AWS/AWS Cloud Practitioner/10. Security & Compliance.md
+++ b/AWS/AWS Cloud Practitioner/10. Security & Compliance.md
@@ -139,7 +139,7 @@ GuardDuty uses inputs from [CloudTrail](11.%20Cloud%20Monitoring.md#cloudtrail),
 
 Amazon Inspector is an automated **vulnerability management service** for workloads
 
-It integrates with CI/CD and security tools while scanning [EC2](04.%20Amazon%20EC2.md#04--ec2), [ECR](07.%20Compute%20Services.md#Amazon%20ECR%20(elastic-container-registry) and [Lambda ](07.%20Compute%20Services.md#lambda-functions-serverless) for vulnerabilities.
+It integrates with CI/CD and security tools while scanning [EC2](04.%20Amazon%20EC2.md#04.%20EC2), [ECR](07.%20Compute%20Services.md#Amazon%20ECR%20(elastic-container-registry) and [Lambda ](07.%20Compute%20Services.md#lambda-functions-serverless) for vulnerabilities.
 
 ## Amazon Macie
 
