--- a/AWS/AWS Cloud Practitioner/11. Cloud Monitoring.md
+++ b/AWS/AWS Cloud Practitioner/11. Cloud Monitoring.md
@@ -20,7 +20,7 @@ tags:
 
 CloudWatch is a **monitoring & observability service that collects and analyzes metrics**, logs and events in real-time from AWS and on-prem resources.
 
-It monitors resources like  [EC2](04.%20Amazon%20EC2.md#04--ec2), [Lambda ](07.%20Compute%20Services.md#lambda-functions-serverless), [EBS](04.%20Amazon%20EC2.md#ebs-volumes) and [RDS](06.%20Databases.md#amazon-rds) and can trigger alarms, dashboards and automated actions.
+It monitors resources like  [EC2](04.%20Amazon%20EC2.md#04.%20EC2), [Lambda ](07.%20Compute%20Services.md#lambda-functions-serverless), [EBS](04.%20Amazon%20EC2.md#ebs-volumes) and [RDS](06.%20Databases.md#amazon-rds) and can trigger alarms, dashboards and automated actions.
 
 Integrates with auto scaling, [SNS](08.%20Integration%20Services.md#amazon-sns), [EventBridge](#eventbridge-serverless), etc.
 
