--- a/AWS/AWS Cloud Practitioner/15. Well Architectured Framework.md
+++ b/AWS/AWS Cloud Practitioner/15. Well Architectured Framework.md
@@ -38,7 +38,7 @@ Security includes the ability to protect information, systems and assets while d
 
 Design Principles:
 
-- **Implement a strong identity foundation** - Centralize privilege management and reduce (or even eliminate) reliance on long-term credentials. (Principle of least privilege). [IAM](03.%20IAM.md#03--iam).
+- **Implement a strong identity foundation** - Centralize privilege management and reduce (or even eliminate) reliance on long-term credentials. (Principle of least privilege). [IAM](03.%20IAM.md#03.%20IAM).
 - **Enable traceability** - Integrate logs and metrics with systems to automatically respond and take action;
 - **Apply security at all layers** - Like edge network, [VPC](09.%20VPCs%20&%20Networking.md#vpcs--subnets), [subnet](09.%20VPCs%20&%20Networking.md#vpcs--subnets), load balancer, every instance, operating system and application;
 - **Protect data in transit and at rest** - Encryption, tokenization and access control;
