--- a/Kubernetes/00. Cheatsheet.md
+++ b/Kubernetes/00. Cheatsheet.md
@@ -53,35 +53,35 @@ kubectl describe <object>/<object_name> -n namespace  # Describes the structure 
 kubectl logs <object_name> -n <namespace>             # Prints the logs of an object, (e.g. pod).
 ```
 
-### Node commands
+### [Node](01.%20Overview.md#Nodes%20(Minions)) commands
 
 ```bash
 kubectl label nodes <node> <key>=<value>.         # Labels a node.
 kubectl taint nodes <node> <key>=<value>:<effect> # Taints a node. (Pod repelling).
 ```
 
-### [Pod](02.%20Pods.md#02-pods) commands
+### [Pod](02.%20Pods.md#02.%20Pods) commands
 
 ```bash
 kubectl run <pod-name> --image <container-image> -n <namespace> # Deploys a pod from a container image.
 ```
 
-### [ReplicaSet](03.%20ReplicaSets.md#03--replicasets) commands
+### [ReplicaSet](03.%20ReplicaSets.md#03.%20ReplicaSets) commands
 
 ```bash
 kubectl scale --replicas=<desired_replicas> replicaset <rs_name> # Scales the number of pods managed by a ReplicaSet.
 ```
 
-### [Deployment](04.%20Deployments.md#04--deployments) commands
+### [Deployment](04.%20Deployments.md#04.%20Deployments) commands
 
 ```bash
-kubetctl rollout status deployment/<deployment_name> -n <namespace>   # Retirms the status of a rollout.
+kubetctl rollout status deployment/<deployment_name> -n <namespace>   # Returns the status of a rollout.
 kubectl rollout restart deployment/<deployment_name> -n <namespace>   # Restarts a deployment.
 kubectl rollout undo deployment/<deployment_name> -n <namespace>      # Undo a rollout.
 kubetctl rollout history deployment/<deployment_name> -n <namespace>  # Returns the list of revisions and history of rollouts.
 ```
 
-### [Namespace](06.%20Namespaces.md#06--namespaces) commands
+### [Namespace](06.%20Namespaces.md#06.%20Namespaces) commands
 
 ```bash
 kubectl create namespace <namespace> # Creates a new namespace.
