--- a/Kubernetes/01. Overview.md
+++ b/Kubernetes/01. Overview.md
@@ -26,7 +26,7 @@ Kubernetes, (originally developed by Google), is an **open-source container orch
 
 Kubernetes can be deployed on multiple platforms such as locally and on a cloud like AWS.
 
-**Note:** For a list of Kubernetes commands, see [Kubernetes Cheatsheet](00.%20Cheatsheet.md#00--cheatsheet).
+**Note:** For a list of Kubernetes commands, see [Kubernetes Cheatsheet](00.%20Cheatsheet.md).
 
 ## Container Orchestration
 
@@ -34,7 +34,7 @@ Container Orchestration s the automatic management of containerized applications
 
 It brings many advantages such as:
 
-- Because there are multiple instances of an application running in different [nodes](#nodes-minions), a hardware failure does not bring the application down. (**High availability** principle);
+- Because there are multiple instances of an application running in different [nodes](#Nodes%20(Minions)), a hardware failure does not bring the application down. (**High availability** principle);
 - The user traffic is **load balanced** across the various containers;
 - The applications automatically scale up/down based on demand increase/decrease.
 
