--- a/Kubernetes/02. Pods.md
+++ b/Kubernetes/02. Pods.md
@@ -57,7 +57,8 @@ spec: # Required field. Information about the object.
        image: nginx
 ```
 
-> Labels allow for easy grouping and filtering of pods based on their characteristics. See [Labels & Selectors](07.%20Scheduling.md#labels-&-selectors) and [Creating a new ReplicaSet](03.%20ReplicaSets.md#creating-a-new-replicaset).
+> [!NOTE]
+> Labels allow for easy grouping and filtering of pods based on their characteristics. See [Creating a new ReplicaSet](03.%20ReplicaSets.md#Creating%20a%20new%20ReplicaSet).
 
 
 Then, using `kubectl`, run:
