--- a/Kubernetes/03. ReplicaSets.md
+++ b/Kubernetes/03. ReplicaSets.md
@@ -18,9 +18,10 @@ tags:
 
 # 03. ReplicaSets
 
-A ReplicaSet's purpose is to **maintain a stable set of replica [Pods](02.%20Pods.md#02-pods) running** at any given time.
+A ReplicaSet's purpose is to **maintain a stable set of replica [Pods](02.%20Pods.md#02.%20Pods) running** at any given time.
 
-**Note:** It is recommended to define a [Deployment](04.%20Deployments.md#04--deployments) and let that Deployment manage ReplicaSets automatically.
+>[!TIP]
+>It is recommended to define a [Deployment](04.%20Deployments.md#04.%20Deployments) and let that Deployment manage ReplicaSets automatically.
 
 ## Creating a new ReplicaSet
 
