--- a/Kubernetes/04. Deployments.md
+++ b/Kubernetes/04. Deployments.md
@@ -158,4 +158,4 @@ To delete a Deployment, using `kubectl`, run:
 kubectl delete deployment/<deployment_name> -n <namespace>
 ```
 
-**Warning:** This will delete all [ReplicaSets](03.%20ReplicaSets.md#03--replicasets) and [Pods](02.%20Pods.md#02-pods) managed by the Deployment.
+**Warning:** This will delete all [ReplicaSets](03.%20ReplicaSets.md#03.%20ReplicaSets) and [Pods](02.%20Pods.md#02.%20Pods) managed by the Deployment.
