--- a/Kubernetes/05. Services.md
+++ b/Kubernetes/05. Services.md
@@ -17,7 +17,7 @@ tags:
 
 # 05. Services
 
-Kubernetes Services **enable communication between various components** within and outside of an application. They are an abstract way to expose an application running on a set of [pods](02.%20Pods.md#02-pods).
+Kubernetes Services **enable communication between various components** within and outside of an application. They are an abstract way to expose an application running on a set of [pods](02.%20Pods.md#02.%20Pods).
 
 Services are created using YAML files with the following `kubectl`command:
 
@@ -29,16 +29,16 @@ kubectl apply -f service.yaml
 
 ### NodePort
 
-The NodePort service type is used to **map a port on a [node](01.%20Overview.md#nodes-minions), to a port on a [pod](02.%20Pods.md#02-pods)**.
+The NodePort service type is used to **map a port on a [node](01.%20Overview.md#Nodes%20(Minions)), to a port on a [pod](02.%20Pods.md#02.%20Pods)**.
 
 In reality, there are 3 ports involved in this type of service:
 
 1. **Target Port** : Port where the application is exposed:
 2. **Port** : Intermediary port, this is the service port;
-3. **Node Port** : Port used to access the application when connecting to the [node](01.%20Overview.md#nodes-minions).
+3. **Node Port** : Port used to access the application when connecting to the [node](01.%20Overview.md#Nodes%20(Minions)).
 	- **Note:** Node Ports range from ports 30000-32767.
 
-Here is an example mapping the [node](01.%20Overview.md#nodes-minions) port 30008 to a [pod](02.%20Pods.md#02-pods) port 80:
+Here is an example mapping the [node](01.%20Overview.md#Nodes%20(Minions)) port 30008 to a [pod](02.%20Pods.md#02.%20Pods) port 80:
 
 <div align="center">
     <img src="../Assets/Images/Diagrams/Kubernetes/Services - NodePort.png" alt="Services - NodePort">
@@ -65,7 +65,7 @@ spec:
     type: front-end
 ```
 
-In a Production scenario, where multiple [nodes](01.%20Overview.md#nodes-minions) and [pods](02.%20Pods.md#02-pods) exist, Kubernetes will automatically span the service across the [nodes](01.%20Overview.md#nodes-minions) and maps the target port to the same [node](01.%20Overview.md#nodes-minions) port in all [nodes](01.%20Overview.md#nodes-minions) of the cluster:
+In a Production scenario, where multiple [nodes](01.%20Overview.md#Nodes%20(Minions)) and [pods](02.%20Pods.md#02.%20Pods) exist, Kubernetes will automatically span the service across the [nodes](01.%20Overview.md#Nodes%20(Minions)) and maps the target port to the same [node](01.%20Overview.md#Nodes%20(Minions)) port in all [nodes](01.%20Overview.md#Nodes%20(Minions)) of the cluster:
 
 Kubernetes - Services - NodePort Multi-Node
 
@@ -73,7 +73,7 @@ Kubernetes - Services - NodePort Multi-Node
     <img src="../Assets/Images/Diagrams/Kubernetes/Services - NodePort Multi-Node.png" alt="Services - NodePort Multi-Node">
 </div>
 
-**Note:** Incoming traffic will be randomly distributed across [nodes](01.%20Overview.md#nodes-minions).
+**Note:** Incoming traffic will be randomly distributed across [nodes](01.%20Overview.md#Nodes%20(Minions)).
 
 ### ClusterIP
 
