--- a/Kubernetes/07. Scheduling.md
+++ b/Kubernetes/07. Scheduling.md
@@ -20,11 +20,11 @@ tags:
 
 # 07. Scheduling
 
-Scheduling refers to the process of assigning workload requests, in the form of [pods](02.%20Pods.md#02-pods), to specific [nodes](01.%20Overview.md#nodes-minions) within a cluster.
+Scheduling refers to the process of assigning workload requests, in the form of [pods](02.%20Pods.md#02.%20Pods), to specific [nodes](01.%20Overview.md#Nodes%20(Minions)) within a cluster.
 
 ## Taints & Tolerations
 
-Taints & Tolerations are a mechanism in Kubernetes that **allow [nodes](01.%20Overview.md#nodes-minions) to repel [pods](02.%20Pods.md#02-pods)**.
+Taints & Tolerations are a mechanism in Kubernetes that **allow [nodes](01.%20Overview.md#Nodes%20(Minions)) to repel [pods](02.%20Pods.md#02.%20Pods)**.
 
 <div align="center">
     <img src="../Assets/Images/Diagrams/Kubernetes/Taints & Tolerations.png" alt="Taints & Tolerations">
@@ -45,14 +45,14 @@ A taint consists of three components:
 
 - **Key**: A string that identifies the taint.
 - **Value**: A string that complements the key but is optional.
-- **Effect**: Defines what happens to [pods](02.%20Pods.md#02-pods) that do not tolerate the taint. Possible effects are:
-    - **NoSchedule**: New [pods](02.%20Pods.md#02-pods) will not be scheduled on the [node](01.%20Overview.md#nodes-minions).
-    - **PreferNoSchedule**: The scheduler tries not to schedule [pods](02.%20Pods.md#02-pods) on the [node](01.%20Overview.md#nodes-minions) but may do so if no other options are available.
-    - **NoExecute**: Existing [pods](02.%20Pods.md#02-pods) without tolerations will be evicted from the [node](01.%20Overview.md#nodes-minions).
+- **Effect**: Defines what happens to [pods](02.%20Pods.md#02.%20Pods) that do not tolerate the taint. Possible effects are:
+    - **NoSchedule**: New [pods](02.%20Pods.md#02.%20Pods) will not be scheduled on the [node](01.%20Overview.md#Nodes%20(Minions)).
+    - **PreferNoSchedule**: The scheduler tries not to schedule [pods](02.%20Pods.md#02.%20Pods) on the [node](01.%20Overview.md#Nodes%20(Minions)) but may do so if no other options are available.
+    - **NoExecute**: Existing [pods](02.%20Pods.md#02.%20Pods) without tolerations will be evicted from the [node](01.%20Overview.md#Nodes%20(Minions)).
 
-When a [node](01.%20Overview.md#nodes-minions) is tainted, it means that it will not accept any [pods](02.%20Pods.md#02-pods) **unless they have a matching toleration**.
+When a [node](01.%20Overview.md#Nodes%20(Minions)) is tainted, it means that it will not accept any [pods](02.%20Pods.md#02.%20Pods) **unless they have a matching toleration**.
 
-[Nodes](01.%20Overview.md#nodes-minions) are tainted using the following `kubectl`command:
+[Nodes](01.%20Overview.md#Nodes%20(Minions)) are tainted using the following `kubectl`command:
 
 ```bash
 kubectl taint nodes <node> <key>=<value>:<effect>
@@ -60,9 +60,9 @@ kubectl taint nodes <node> <key>=<value>:<effect>
 
 ### Tolerations
 
-Tolerations are the counterpart to taints. They **allow [pods](02.%20Pods.md#02-pods) to be scheduled on nodes with taints**.
+Tolerations are the counterpart to taints. They **allow [pods](02.%20Pods.md#02.%20Pods) to be scheduled on nodes with taints**.
 
-Tolerations are applied to [pods](02.%20Pods.md#02-pods) by adding the following to their YAML specification:
+Tolerations are applied to [pods](02.%20Pods.md#02.%20Pods) by adding the following to their YAML specification:
 
 ```yaml
 apiVersion: v1
@@ -79,7 +79,7 @@ spec:
 
 ## Node Affinity & Node Selectors
 
-Node Affinity & Node Selectors are two mechanisms for **controlling where a [pod](02.%20Pods.md#02-pods) should be scheduled**.
+Node Affinity & Node Selectors are two mechanisms for **controlling where a [pod](02.%20Pods.md#02.%20Pods) should be scheduled**.
 
 When combined with Taints & Tolerations, it is possible to know exactly where a pod will be scheduled to:
 
@@ -102,7 +102,7 @@ kubectl label nodes node1 disktype=ssd
 kubectl label nodes node2 disktype=hdd
 ```
 
-Second, apply the Node Selector to the YAML specification of the [pod](02.%20Pods.md#02-pods) that should be scheduled to the SSD [node](01.%20Overview.md#nodes-minions):
+Second, apply the Node Selector to the YAML specification of the [pod](02.%20Pods.md#02.%20Pods) that should be scheduled to the SSD [node](01.%20Overview.md#Nodes%20(Minions)):
 
 ```yaml
 apiVersion: v1
@@ -121,12 +121,12 @@ spec:
 
 ### Node Affinity
 
-The primary purpose of the node affinity feature is to **ensure that [pods](02.%20Pods.md#02-pods) are hosted on particular [nodes](01.%20Overview.md#nodes-minions)**.
+The primary purpose of the node affinity feature is to **ensure that [pods](02.%20Pods.md#02.%20Pods) are hosted on particular [nodes](01.%20Overview.md#Nodes%20(Minions))**.
 
 There are two types of node affinity:
 
-1. `RequiredDuringSchedulingIgnoredDuringExecution`: This means that a [pod](02.%20Pods.md#02-pods) can only be scheduled on [nodes](01.%20Overview.md#nodes-minions) that meet the specified criteria. If no qualifying [nodes](01.%20Overview.md#nodes-minions) are available, the [pod](02.%20Pods.md#02-pods) will not be scheduled.
-2. `PreferredDuringSchedulingIgnoredDuringExecution`: This indicates that while the [pod](02.%20Pods.md#02-pods) prefers to be scheduled on [nodes](01.%20Overview.md#nodes-minions) that match the criteria, it can still be scheduled elsewhere if necessary. This type of affinity uses a weight to determine the preference.
+1. `RequiredDuringSchedulingIgnoredDuringExecution`: This means that a [pod](02.%20Pods.md#02.%20Pods) can only be scheduled on [nodes](01.%20Overview.md#Nodes%20(Minions)) that meet the specified criteria. If no qualifying [nodes](01.%20Overview.md#Nodes%20(Minions)) are available, the [pod](02.%20Pods.md#02.%20Pods) will not be scheduled.
+2. `PreferredDuringSchedulingIgnoredDuringExecution`: This indicates that while the [pod](02.%20Pods.md#02.%20Pods) prefers to be scheduled on [nodes](01.%20Overview.md#Nodes%20(Minions)) that match the criteria, it can still be scheduled elsewhere if necessary. This type of affinity uses a weight to determine the preference.
 
 Node affinity is defined within the YAML pod specification under `affinity` settings. E.g:
 
@@ -156,9 +156,9 @@ spec:
 
 ## Resource Limits
 
-When a [pod](02.%20Pods.md#02-pods) is scheduled to a [node](01.%20Overview.md#nodes-minions), in theory, it can consume all available resources until none are left.
+When a [pod](02.%20Pods.md#02.%20Pods) is scheduled to a [node](01.%20Overview.md#Nodes%20(Minions)), in theory, it can consume all available resources until none are left.
 
-To limit this, it is possible to set a cap on the amount of resources that should be available to that [pod](02.%20Pods.md#02-pods). This is done in it's YAML the specification:
+To limit this, it is possible to set a cap on the amount of resources that should be available to that [pod](02.%20Pods.md#02.%20Pods). This is done in it's YAML the specification:
 
 ```yaml
 apiVersion: v1
@@ -180,21 +180,21 @@ spec:
       cpu: "500m"
 ```
 
-The `limits`section sets a limit on how much resources the [pod](02.%20Pods.md#02-pods) can consume.
+The `limits`section sets a limit on how much resources the [pod](02.%20Pods.md#02.%20Pods) can consume.
 
 > What happens when a container tries to exceed it's resource limit?
 > In case of the CPU, the system throttles the CPU so that the container does not exceed it's imposed limit.
 > In case of the memory however, a container can consume more memory than the imposed limit. If this happens often, the pod will be terminated with an Out Of Memory error in the logs.
 
-The `requests`section defines the minimum amount of resources that need to be available on a [node](01.%20Overview.md#nodes-minions) for the [pod](02.%20Pods.md#02-pods) to be scheduled in it.
+The `requests`section defines the minimum amount of resources that need to be available on a [node](01.%20Overview.md#Nodes%20(Minions)) for the [pod](02.%20Pods.md#02.%20Pods) to be scheduled in it.
 
 **Note:** See [Resource Units](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#resource-units-in-kubernetes) for a breakdown of the units used in the specification.
 
 ### LimitRange Object
 
-To ensure that all [pods](02.%20Pods.md#02-pods) have a default resource limit, no matter their YAML specification, LimitRange objects are used.
+To ensure that all [pods](02.%20Pods.md#02.%20Pods) have a default resource limit, no matter their YAML specification, LimitRange objects are used.
 
-These objects **impose constraints on the resource requests and limits for [pods](02.%20Pods.md#02-pods) or containers at [namespace](06.%20Namespaces.md#06-namespaces) level**.
+These objects **impose constraints on the resource requests and limits for [pods](02.%20Pods.md#02.%20Pods) or containers at [namespace](06.%20Namespaces.md#06.%20Namespaces) level**.
 
 E.g. definition:
 
@@ -224,7 +224,7 @@ spec:
 ### ResourceQuota Object
 
 The ResourceQuota objects are used to set hard **limits on the amount of resources that are consumed by all of the deployed pods in total**.
-
+06.%20Namespaces.md#06.%20Namespaces
 ResourceQuotas are also applied at [namespace](06.%20Namespaces.md#06-namespaces) level.
 
 E.g. definition:
