--- a/Kubernetes/08. DaemonSets.md
+++ b/Kubernetes/08. DaemonSets.md
@@ -17,7 +17,7 @@ tags:
 
 # 08. DaemonSets
 
-A DaemonSet is very similar to a [ReplicaSet](03.%20ReplicaSets.md#03-replicasets), the difference however, is that a DaemonSet **ensures a particular [pod](02.%20Pods.md#02-pods) runs on every [node](01.%20Overview.md#nodes-minions)** of the cluster. 
+A DaemonSet is very similar to a [ReplicaSet](03.%20ReplicaSets.md#03.%20ReplicaSets), the difference however, is that a DaemonSet **ensures a particular [pod](02.%20Pods.md#02.%20Pods) runs on every [node](01.%20Overview.md#Nodes%20(Minions))** of the cluster. 
 
 This is particularly useful for tasks that need to be handled at the node level, such as monitoring, logging, or networking.
 
@@ -66,7 +66,7 @@ kubectl get ds -n <namespace>
 kubectl get ds -n <namespace> -o wide
 ```
 
-To describe a DaemonaSet, using `kubectl` run:
+To describe a DaemonSet, using `kubectl` run:
 
 ```bash
 kubectl describe ds/<ds_name> -n <namespace>
