--- a/Terraform/00. Best Practices.md
+++ b/Terraform/00. Best Practices.md
@@ -6,6 +6,7 @@ tags:
   - IaC
 ---
 **Table of contents**
+
 - [00. Best Practices](#00-best-practices)
   - [Naming Conventions](#naming-conventions)
   - [Project Structure:](#project-structure)
@@ -38,7 +39,7 @@ locals {
 	1. **`main.tf`** - Main configuration;
 	2. **`variables.tf`** - Variable declarations;
 	3. **`outputs.tf`** - Output declarations;
-	4. **`providers.tf`** - [Providers](02.%20Providers.md) requirements;
+	4. **`providers.tf`** - [Providers](02.%20Providers.md#02.%20Providers) requirements;
 	5. **`backend.tf`** - Backend configuration.
 2. Environment specific variables should be defined in an `environment.tfvars` file;
 
@@ -63,10 +64,10 @@ terraform-project/
 
 ## Security
 
-1. Always encrypt the [state file](01.%20State%20file.md);
+1. Always encrypt the [state file](01.%20State%20file.md#01.%20State%20file);
 2. Avoid storing secrets locally, use a secure providers like AWS Secrets Manager;
 3. Make use of `sensitive = true` for sensitive Terraform variables.
-4. Always use a `.gitignore` in order to avoid comiting sensitive data to a remote git repository.
+4. Always use a `.gitignore` in order to avoid committing sensitive data to a remote git repository.
 
 ## Versioning
 
