--- a/Terraform/03. Block Types.md
+++ b/Terraform/03. Block Types.md
@@ -6,6 +6,7 @@ tags:
   - IaC
 ---
 **Table of contents**
+
 - [03. Block Types](#03-block-types)
   - [Provider](#provider)
   - [Resource](#resource)
@@ -33,7 +34,7 @@ provider "aws" {
 }
 ```
 
-(See [02. Providers](02.%20Providers.md))
+(See [Providers](02.%20Providers.md#02.%20Providers))
 
 ## Resource
 
@@ -88,7 +89,7 @@ variable "instance_type" {
 }
 ```
 
-(See - [04. Variable Types](04.%20Variable%20Types.md))
+(See - [Variable Types](04.%20Variable%20Types.md#04.%20Variable%20Types))
 
 ## Output
 
