--- a/Terraform/05. Terraform Commands.md
+++ b/Terraform/05. Terraform Commands.md
@@ -6,6 +6,7 @@ tags:
   - IaC
 ---
 **Table of contents**
+
 - [05. Terraform Commands](#05-terraform-commands)
   - [Initializing Terraform](#initializing-terraform)
   - [Code Formatting](#code-formatting)
@@ -83,7 +84,7 @@ terraform show                       # Show current state
 terraform show tfplan                # Show saved plan
 ```
 
-## Outputing Values
+## Outputting Values
 
 ```bash
 terraform output
